--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@
     <!-- Course Content Section -->
     <div class="course-content">
         <!-- Lesson 1: IT Training Course Summary for Nursing Students -->
-        <h1>🩺 Lesson 1: Introduction to IT Training for Nurses</h1>
+        <h1>🩺 Lesson 1: Demo of Lecture </h1>
         <p>
-            Welcome to the demo lecture on Medical Imaging by Your Indian Institute of Technology Kharagpur Professor .  
+            This is demo lecture by Your Indian  Professor .  
         </p>
         <h2>🗓️ Full Course soon</h2>
         
