--- a/index.html
+++ b/index.html
@@ -305,6 +305,15 @@
 </head>
 <body>
     <!-- Login Overlay -->
+    <div id="loginOverlay">
+        <div class="login-container">
+            <h2>Login</h2>
+            <input type="text" id="username" placeholder="Enter Username" required>
+            <input type="password" id="password" placeholder="Enter Password" required>
+            <button onclick="login()">Login</button>
+            <p id="error" class="error"></p>
+        </div>
+    </div>
 
     <!-- Main Content -->
     <div class="video-container">
@@ -359,9 +368,22 @@
     <script src="https://www.youtube.com/iframe_api"></script>
 
     <script>
-       
+        const validUsers = ['rohit', 'utkarsh', 'anita', 'arunima', 'bisheline'];
 
-     
+        // Function to handle login
+        function login() {
+            const username = document.getElementById('username').value.trim().toLowerCase();
+            const password = document.getElementById('password').value.trim().toLowerCase();
+            const error = document.getElementById('error');
+
+            if (validUsers.includes(username) && username === password) {
+                document.getElementById('loginOverlay').style.display = 'none'; // Hide login overlay
+                document.getElementById('controlsContainer').style.display = 'flex'; // Show controls
+            } else {
+                error.textContent = "Invalid Username or Password!";
+            }
+        }
+
         // Variables to hold the player and control buttons
         let player;
         const playButton = document.getElementById('playButton');
